# triviabot

./: .gitignore  pyproject.toml  trivia.py  triviabot.py
.aurfluxconf/triviabot/: base.yaml
